--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "karodpati-backend",
   "version": "1.0.0",
   "description": "quiz app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "nodemon -e html,js server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
