--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/shachsan/karodpati-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "mongoose": "^5.5.5",
     "nodemon": "^1.19.0"
   }
 }
